[options]
py_modules =
    reconplogger 
    reconplogger_tests
test_suite = reconplogger_tests
python_requires = >=3.5
install_requires =
    logmatic-python>=0.1.7
    PyYAML>=3.13


[options.extras_require]
all =
    Flask>=1.1.1
    requests>=2.24.0
test =
    testfixtures>=6.10.0
    coverage>=4.5.1
dev =
    pylint>=1.8.3
    bump2version>=0.5.11
    twine>=3.1.1
doc =
    Sphinx>=1.7.9
    sphinx-rtd-theme>=0.4.3
    autodocsumm>=0.1.10


[metadata]
name = reconplogger
version = 4.3.1
description = omni:us python logging package
long-description = file: README.rst
author = Nischal Padmanabha, Mauricio Villegas
author-email = nischal@omnius.com
license = MIT
url = https://omni-us.github.io/reconplogger
project-urls =
    Documentation = https://omni-us.github.io/reconplogger
    GitHub = https://github.com/omni-us/reconplogger
    PyPI = https://pypi.org/project/reconplogger
    CircleCI = https://circleci.com/gh/omni-us/reconplogger
    Codecov = https://codecov.io/gh/omni-us/reconplogger
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS


[build_sphinx]
version = local build
release = local build
source_dir = sphinx
build_dir = sphinx/_build
