[options]
py_modules =
    reconplogger 
    reconplogger_tests
test_suite = reconplogger_tests
python_requires = >=3.6
install_requires =
    logmatic-python>=0.1.7
    PyYAML>=3.13


[options.extras_require]
all =
    Flask>=1.1.1
    requests>=2.24.0
test =
    testfixtures==6.10.0
    coverage>=4.5.1
dev =
    %(all)s
    %(test)s
    pre-commit>=2.19.0
    pylint>=1.8.3
    tox>=3.25.0
doc =
    Sphinx>=1.7.9
    sphinx-rtd-theme>=0.4.3
    autodocsumm>=0.1.10
    sphinx-autodoc-typehints>=1.11.1
maintainer =
    bump2version>=0.5.11
    twine>=3.1.1


[metadata]
name = reconplogger
version = 4.10.1
description = omni:us python logging package
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Nischal Padmanabha, Mauricio Villegas
author_email = mauricio@omnius.com
license = MIT
url = https://omni-us.github.io/reconplogger
project_urls =
    Documentation-stable = https://reconplogger.readthedocs.io/en/stable/
    Documentation-latest = https://reconplogger.readthedocs.io/en/latest/
    GitHub = https://github.com/omni-us/reconplogger
    PyPI = https://pypi.org/project/reconplogger
    CircleCI = https://circleci.com/gh/omni-us/reconplogger
    SonarCloud = https://sonarcloud.io/dashboard?id=omni-us_reconplogger
    Codecov = https://codecov.io/gh/omni-us/reconplogger
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS


[build_sphinx]
version = local build
release = local build
source_dir = sphinx
build_dir = sphinx/_build


[tox:tox]
envlist = py{36,37,38,39,310},no-extras


[testenv]
extras =
    all
    test
commands = discover --pattern=reconplogger_tests.py
deps = discover


[testenv:no-extras]
extras = test
